Restore as.vector.integer64

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,7 +112,9 @@ export(
 ,"print.integer64"
 ,"format.integer64"
 ,"is.vector.integer64"
-# as.vector.integer64 removed as requested by the CRAN maintainer ,"as.vector.integer64"
+# as.vector.integer64 originally removed per CRAN request, because matrix(integer64) didn't work.
+# Don't publish this version on CRAN until resolved.
+,"as.vector.integer64"
 ,"is.na.integer64"
 ,"is.nan.integer64"
 ,"is.finite.integer64"
@@ -400,7 +402,10 @@ S3method("str", integer64)
 S3method("print", integer64)
 S3method("format", integer64)
 S3method("is.vector", integer64)
-# as.vector.integer64 removed as requested by the CRAN maintainer S3method("as.vector", integer64)
+# as.vector.integer64 originally removed per CRAN request, because matrix(integer64) didn't work.
+# Don't publish this version on CRAN until resolved.
+S3method("as.vector", integer64)
+
 S3method("is.na", integer64)
 S3method("is.nan", integer64)
 S3method("is.finite", integer64)
