--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ export(
 ,"cbind.integer64"
 ,"rbind.integer64"
 ,"as.data.frame.integer64"
+,"as.list.integer64"
 
 ,"min.integer64"
 ,"max.integer64"
@@ -489,6 +490,7 @@ S3method("seq", integer64)
 S3method("cbind", integer64)
 S3method("rbind", integer64)
 S3method("as.data.frame", integer64)
+S3method("as.list", integer64)
 
 S3method("min", integer64)
 S3method("max", integer64)
